using UnityEngine;

[CreateAssetMenu]
public class KeyMap : ScriptableObject {
  public KeyCode MoveUp;
  public KeyCode MoveRight;
  public KeyCode MoveDown;
  public KeyCode MoveLeft;

  public KeyCode ToggleStanchion;
  public KeyCode Attack;
  public KeyCode Ability1;
  public KeyCode Ability2;
  public KeyCode Ability3;
  public KeyCode Ability4;
}